--- a/BlobDeliveryLib/CloudDeployLib.csproj
+++ b/BlobDeliveryLib/CloudDeployLib.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{976A608A-F4EA-4521-AF69-2021BD68EC6A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{079305DB-C6FB-4628-BFAB-DF969EA2B853}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AoDeliver</RootNamespace>
-    <AssemblyName>AoDeliver</AssemblyName>
+    <RootNamespace>CloudDeployLib</RootNamespace>
+    <AssemblyName>CloudDeployLib</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -73,20 +70,22 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="XmlSerializerHelper, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AoXmlSerializer.1.0.4\lib\net461\XmlSerializerHelper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Installers\DeployMaster.cs" />
+    <Compile Include="Installers\Process.cs" />
+    <Compile Include="Engine.cs" />
+    <Compile Include="FileVersionList.cs" />
+    <Compile Include="IInstaller.cs" />
+    <Compile Include="Installers\ZipFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BlobDeliveryLib\CloudDeployLib.csproj">
-      <Project>{079305db-c6fb-4628-bfab-df969ea2b853}</Project>
-      <Name>CloudDeployLib</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
