--- a/AoDeliver/AoDeliver.csproj
+++ b/AoDeliver/AoDeliver.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{976A608A-F4EA-4521-AF69-2021BD68EC6A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AoDeliver</RootNamespace>
-    <AssemblyName>AoDeliver</AssemblyName>
+    <RootNamespace>CloudDeploy</RootNamespace>
+    <AssemblyName>CloudDeploy</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
