--- a/CloudDeployUI/packages.config
+++ b/CloudDeployUI/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AoFileSystemLib" version="1.0.3" targetFramework="net461" />
+  <package id="AoOptions" version="1.5.9" targetFramework="net461" />
   <package id="AoXmlSerializer" version="1.0.9" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net461" />
 </packages>
