--- a/ClientLib/ClientLib.csproj
+++ b/ClientLib/ClientLib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{079305DB-C6FB-4628-BFAB-DF969EA2B853}</ProjectGuid>
+    <ProjectGuid>{E039C488-F67F-449A-9ED7-CE0BE189318F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AzDeploy.Server</RootNamespace>
-    <AssemblyName>AzDeployLib</AssemblyName>
+    <RootNamespace>AzDeploy.Client</RootNamespace>
+    <AssemblyName>AzDeployClient</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,10 +32,6 @@
   <ItemGroup>
     <Reference Include="AzureXmlSerializer, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\AoAzureXmlSerializer.1.0.4\lib\net461\AzureXmlSerializer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="FileSystemLib, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\AoFileSystemLib.1.0.3\lib\net461\FileSystemLib.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Azure.KeyVault.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -63,9 +59,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Spatial, Version=5.8.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Spatial.5.8.2\lib\net40\System.Spatial.dll</HintPath>
       <Private>True</Private>
@@ -76,29 +71,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="XmlSerializerHelper, Version=1.0.9.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\AoXmlSerializer.1.0.9\lib\net461\XmlSerializerHelper.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Installers\BuildOutputZipFile.cs" />
-    <Compile Include="Installers\DeployMaster.cs" />
-    <Compile Include="Installers\Process.cs" />
-    <Compile Include="Engine.cs" />
-    <Compile Include="IInstaller.cs" />
-    <Compile Include="Installers\ZipFile.cs" />
+    <Compile Include="InstallManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UploadLogEntry.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\LogTemplate.html" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CommonLib\CommonLib.csproj">
