--- a/CloudDeployUI/CloudDeployUI.csproj
+++ b/CloudDeployUI/CloudDeployUI.csproj
@@ -62,6 +62,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmAzureCreds.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAzureCreds.Designer.cs">
+      <DependentUpon>frmAzureCreds.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextControlWriter.cs" />
+    <EmbeddedResource Include="frmAzureCreds.resx">
+      <DependentUpon>frmAzureCreds.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
