--- a/BlobDeliveryLib/CloudDeployLib.csproj
+++ b/BlobDeliveryLib/CloudDeployLib.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Engine.cs" />
     <Compile Include="IInstaller.cs" />
     <Compile Include="Installers\ZipFile.cs" />
+    <Compile Include="OneDrive.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UploadLogEntry.cs" />
   </ItemGroup>
